Added New animations

--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,7 +109,7 @@ CurrentRotGridSize=6
 RotGridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Levels/L_Effects
+LastLevel=/Game/Levels/L_LD_JAB
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -152,11 +152,11 @@ ContentBrowserTab1.HorizontalSplitter.SlotSize0=1.379882
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.420117
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.127978
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.872022
-ContentBrowserTab1.ActiveTypeFilters=Material,ObjectRedirector,StaticMesh,Texture2D,World,DestructibleMesh,NiagaraScript,NiagaraScript,NiagaraScript,SkeletalMesh,Skeleton,AnimSequence
+ContentBrowserTab1.ActiveTypeFilters=AnimSequence,Material,ObjectRedirector,SkeletalMesh,Skeleton,StaticMesh,Texture2D,World,DestructibleMesh,NiagaraScript,NiagaraScript,NiagaraScript
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh/AAA
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -216,7 +216,7 @@ UNR=D:/GitHub/RustyRiotRepo/RustyRiot/Content/Levels
 BRUSH=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBX=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBXAnim=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
-GenericImport=../../../../../../Users/AlienBlood/Desktop/PowerUP_Hit.fbx
+GenericImport=../../../../../../Users/AlienBlood/Desktop/ChestIdle.fbx
 GenericExport=../../../../../../Users/n01309645/Desktop/SM_MERGED_SM__Romewall.FBX
 GenericOpen=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 GenericSave=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
@@ -986,8 +986,8 @@ InstalledPlugins=Substance
 InstalledPlugins=ToolbagImporter
 
 [MRU]
-MRUItem0=/Game/Levels/L_Effects
-MRUItem1=/Game/Levels/L_LD_JAB
+MRUItem0=/Game/Levels/L_LD_JAB
+MRUItem1=/Game/Levels/L_Effects
 MRUItem2=/Game/Levels/L_HD_RDB
 MRUItem3=/Game/Levels/L_LD_RDB
 MRUItem4=/Game/Levels/L_HD_JAB
@@ -1000,26 +1000,26 @@ MRUItem10=/Game/Levels/L_HD_LF
 MRUItem11=/Game/Levels/Archive/L_BuildingMaterials
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/AnimationSequence/AS_PowerUP_Hit
-MRUItem1=/Game/Levels/L_Effects
-MRUItem2=/Game/Assets/Materials/Effects/M_Burst
-MRUItem3=/Game/Assets/Textures/Effects/T_Fireball
-MRUItem4=/Game/Assets/StaticMesh/AAA/VVVDDDD_Anim
-MRUItem5=/Game/Assets/StaticMesh/AAA/VVVDDDD_PhysicsAsset
-MRUItem6=/Game/Assets/Materials/Effects/M_BasicRock
-MRUItem7=/Game/Assets/Materials/Effects/M_AssetPlatform
-MRUItem8=/Game/Assets/Materials/Effects/M_ToonExplosion
-MRUItem9=/Game/Assets/Materials/Effects/M_Sparks
-MRUItem10=/Game/Assets/Materials/Effects/M_Spark
-MRUItem11=/Game/Assets/Materials/Effects/M_ShockWaveDecals
-MRUItem12=/Game/Assets/Materials/Effects/M_ShockWave
-MRUItem13=/Game/Assets/Materials/Effects/M_MuzzleFlare
-MRUItem14=/Game/Assets/Materials/Effects/M_GunMuzzleFlash
-MRUItem15=/Game/Assets/Materials/Effects/M_FXCloud
-MRUItem16=/Game/Assets/Materials/Effects/m_flare_01
-MRUItem17=/Game/Assets/Materials/Effects/M_Fire_SubUV
-MRUItem18=/Game/Assets/Materials/Effects/M_Fire
-MRUItem19=/Game/Assets/Materials/Effects/M_CheapFXCloud
+MRUItem0=/Game/Assets/StaticMesh/AAA/Car_01_Break_Anim
+MRUItem1=/Game/Assets/StaticMesh/AAA/Car_01_Idle
+MRUItem2=/Game/Assets/StaticMesh/AAA/Car_01_Idle_Anim
+MRUItem3=/Game/Assets/AnimationSequence/AS_PowerUP_Hit
+MRUItem4=/Game/Levels/L_Effects
+MRUItem5=/Game/Assets/Materials/Effects/M_Burst
+MRUItem6=/Game/Assets/Textures/Effects/T_Fireball
+MRUItem7=/Game/Assets/StaticMesh/AAA/VVVDDDD_Anim
+MRUItem8=/Game/Assets/StaticMesh/AAA/VVVDDDD_PhysicsAsset
+MRUItem9=/Game/Assets/Materials/Effects/M_BasicRock
+MRUItem10=/Game/Assets/Materials/Effects/M_AssetPlatform
+MRUItem11=/Game/Assets/Materials/Effects/M_ToonExplosion
+MRUItem12=/Game/Assets/Materials/Effects/M_Sparks
+MRUItem13=/Game/Assets/Materials/Effects/M_Spark
+MRUItem14=/Game/Assets/Materials/Effects/M_ShockWaveDecals
+MRUItem15=/Game/Assets/Materials/Effects/M_ShockWave
+MRUItem16=/Game/Assets/Materials/Effects/M_MuzzleFlare
+MRUItem17=/Game/Assets/Materials/Effects/M_GunMuzzleFlash
+MRUItem18=/Game/Assets/Materials/Effects/M_FXCloud
+MRUItem19=/Game/Assets/Materials/Effects/m_flare_01
 
 [DetailCategories]
 BP_PipeBuilder_C.Tick=True
@@ -2004,6 +2004,8 @@ ProceduralFoliageBlockingVolume.Actor=True
 /Game/Assets/Materials/Effects/M_CheapFXCloud.M_CheapFXCloud=0
 /Game/Assets/Textures/Effects/T_Fireball.T_Fireball=1
 /Game/Assets/AnimationSequence/AS_PowerUP_Hit.AS_PowerUP_Hit=1
+/Game/Assets/StaticMesh/AAA/Car_01_Idle.Car_01_Idle=1
+/Game/Assets/StaticMesh/AAA/Car_01_Break_Anim.Car_01_Break_Anim=1
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2131,6 +2133,19 @@ PrecomputedVisibilityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSett
 ProceduralFoliageBlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/StaticMesh/AAA/ChestIdle_Anim.ChestIdle_Anim;
+RecentlyPlaced=/Game/Assets/StaticMesh/AAA/ChestIdle.ChestIdle;
+RecentlyPlaced=/Game/Assets/SkeletalMeshes/Chest/SKM_PowerUP_Hit.SKM_PowerUP_Hit;
+RecentlyPlaced=/Game/Assets/AnimationSequence/Chest/AS_PowerUP_Hit.AS_PowerUP_Hit;
+RecentlyPlaced=/Game/Assets/StaticMesh/AAA/TESTIdle_Anim.TESTIdle_Anim;
+RecentlyPlaced=/Game/Assets/StaticMesh/AAA/TESTIdle.TESTIdle;
+RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_01.SKM_Car_01;
+RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_03.SKM_Car_03;
+RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_03_PA.SKM_Car_03_PA;
+RecentlyPlaced=/Game/Assets/AnimationSequence/Cars/AS_Car_01_Break.AS_Car_01_Break;
+RecentlyPlaced=/Game/Assets/AnimationSequence/Cars/AS_Car_01_Idle.AS_Car_01_Idle;
+RecentlyPlaced=/Game/Assets/StaticMesh/AAA/Car_01_Break.Car_01_Break;
+RecentlyPlaced=/Game/Assets/StaticMesh/AAA/Car_01_Idle_01_Anim.Car_01_Idle_01_Anim;
 RecentlyPlaced=/Game/Assets/FX/VFX_01_RockExplosion.VFX_01_RockExplosion;
 RecentlyPlaced=/Game/Assets/StaticMesh/AAA/VVVDDDD_Anim.VVVDDDD_Anim;
 RecentlyPlaced=/Game/Assets/FX/VFX_06_MustardGas.VFX_06_MustardGas;
@@ -2138,19 +2153,6 @@ RecentlyPlaced=/Game/Assets/FX/VFX_02_FlamThrowere.VFX_02_FlamThrowere;
 RecentlyPlaced=/Game/Assets/FX/VFX_04_DrillSparks.VFX_04_DrillSparks;
 RecentlyPlaced=/Game/Assets/FX/VFX_05_RocketSmoke.VFX_05_RocketSmoke;
 RecentlyPlaced=/Game/Assets/FX/VFX_03_MuzzleFlash.VFX_03_MuzzleFlash;
-RecentlyPlaced=/Game/Assets/FX/PS_SimpleMustardCloudSystem.PS_SimpleMustardCloudSystem;
-RecentlyPlaced=/Script/Engine.PrecomputedVisibilityVolume;/Engine/Transient.ActorFactoryBoxVolume_19
-RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT.SKM_Car_ModelT;
-RecentlyPlaced=/Game/Assets/MaterialInstances/car_03/Car3_unwrapped_05.Car3_unwrapped_05;
-RecentlyPlaced=/Game/Assets/MaterialInstances/car_01/Car_01.Car_01;
-RecentlyPlaced=/Game/Assets/MaterialInstances/car_02/Car_02_Glass_FIX.Car_02_Glass_FIX;
-RecentlyPlaced=/Game/Assets/StaticMesh/Wood/SM_Bridge.SM_Bridge;
-RecentlyPlaced=/Game/Assets/StaticMesh/SM_Car_Test.SM_Car_TEST;
-RecentlyPlaced=/Game/Assets/Materials/M_Basic.M_Basic;
-RecentlyPlaced=/Game/Assets/Materials/M_Basic_RDB.M_Basic_RDB;
-RecentlyPlaced=/Game/Assets/Materials/M_ColorGradient_JAB.M_ColorGradient_JAB;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_TankWreck_RDB.SM_TankWreck_RDB;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
