--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,7 +108,7 @@ SnapScaleEnabled=False
 CurrentRotGridSize=6
 
 [EditorStartup]
-LastLevel=/Game/Levels/L_HD_JAB
+LastLevel=/Game/Levels/Archive/L_TextureAssets
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -155,7 +155,7 @@ ContentBrowserTab1.ActiveTypeFilters=AnimSequence,Material,ObjectRedirector,Skel
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets
+ContentBrowserTab1.SelectedPaths=/Game/Assets/AnimationSequence/Cars
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -211,11 +211,11 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
-UNR=D:/GitHub/RustyRiotRepo/RustyRiot/Content/Levels
+UNR=D:/GitHub/RustyRiotRepo/RustyRiot/Content/Levels/Archive
 BRUSH=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBX=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBXAnim=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
-GenericImport=../../../../../../Users/AlienBlood/Desktop/Car_03_PlaceHolder.fbx
+GenericImport=../../../../../../Users/AlienBlood/Desktop/TEST_TEST.fbx
 GenericExport=../../../../../../Users/AlienBlood/Desktop/SKM_Car_03.FBX
 GenericOpen=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 GenericSave=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
@@ -985,10 +985,10 @@ InstalledPlugins=Substance
 InstalledPlugins=ToolbagImporter
 
 [MRU]
-MRUItem0=/Game/Levels/L_HD_JAB
-MRUItem1=/Game/Levels/L_BuildingMaterials
-MRUItem2=/Game/Levels/L_Effects
-MRUItem3=/Game/Levels/Archive/L_TextureAssets
+MRUItem0=/Game/Levels/Archive/L_TextureAssets
+MRUItem1=/Game/Levels/L_HD_JAB
+MRUItem2=/Game/Levels/L_BuildingMaterials
+MRUItem3=/Game/Levels/L_Effects
 MRUItem4=/Game/Levels/L_TextureAssets
 MRUItem5=/Game/Levels/L_TextureTeam
 MRUItem6=/Game/Levels/L_LD_JAB
@@ -999,26 +999,26 @@ MRUItem10=/Game/Levels/L_Lobby
 MRUItem11=/Game/Levels/L_HD_OD
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/L_HD_JAB
-MRUItem1=/Game/Levels/L_BuildingMaterials
-MRUItem2=/Game/Levels/L_Effects
-MRUItem3=/Game/Levels/Archive/L_TextureAssets
-MRUItem4=/Game/Assets/SkeletalMeshes/SK_Car_01
-MRUItem5=/Game/Assets/AnimationSequence/Chest/AS_Chest_Idle
-MRUItem6=/Game/Assets/AnimationSequence/Chest/AS_Chest_Hit
-MRUItem7=/Game/Assets/MaterialInstances/Rocks/MI_Rock_03_JAB
-MRUItem8=/Game/CleanMeUpScotty/CleanMeUpScotty
-MRUItem9=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_02
-MRUItem10=/Game/Assets/MaterialInstances/Cars/Car_02/MI_Car_02_Body
-MRUItem11=/Game/Assets/StaticMesh/AAA/SKM_Car_02
-MRUItem12=/Game/Assets/StaticMesh/AAA/SKM_Car_01
-MRUItem13=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_01
-MRUItem14=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_Car_01
-MRUItem15=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_03
-MRUItem16=/Game/Assets/StaticMesh/AAA/SKM_Car_03
-MRUItem17=/Game/Assets/SkeletalMeshes/Cars/Pura_Mierda
-MRUItem18=/Game/Assets/SkeletalMeshes/Cars/Pura_Mierda_Anim
-MRUItem19=/Game/Assets/SkeletalMeshes/Cars/Pura_Mierda_Skeleton
+MRUItem0=/Game/Levels/Archive/L_TextureAssets
+MRUItem1=/Game/Assets/AnimationSequence/Chest/AS_Chest_Hit
+MRUItem2=/Game/Assets/AnimationSequence/Chest/AS_Chest_Idle
+MRUItem3=/Game/Assets/StaticMesh/AAA/TEST_TEST
+MRUItem4=/Game/Assets/SkeletalMeshes/Chest/SKM_Chest_PA
+MRUItem5=/Game/Assets/StaticMesh/AAA/TEST_TEST_Anim
+MRUItem6=/Game/Levels/L_HD_JAB
+MRUItem7=/Game/Levels/L_BuildingMaterials
+MRUItem8=/Game/Levels/L_Effects
+MRUItem9=/Game/Assets/SkeletalMeshes/SK_Car_01
+MRUItem10=/Game/Assets/MaterialInstances/Rocks/MI_Rock_03_JAB
+MRUItem11=/Game/CleanMeUpScotty/CleanMeUpScotty
+MRUItem12=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_02
+MRUItem13=/Game/Assets/MaterialInstances/Cars/Car_02/MI_Car_02_Body
+MRUItem14=/Game/Assets/StaticMesh/AAA/SKM_Car_02
+MRUItem15=/Game/Assets/StaticMesh/AAA/SKM_Car_01
+MRUItem16=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_01
+MRUItem17=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_Car_01
+MRUItem18=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_03
+MRUItem19=/Game/Assets/StaticMesh/AAA/SKM_Car_03
 
 [DetailCategories]
 BP_PipeBuilder_C.Tick=True
@@ -2050,6 +2050,9 @@ RenameAssets (Selected).None=True
 /Game/CleanMeUpScotty/CleanMeUpScotty.CleanMeUpScotty=1
 /Game/Assets/MaterialInstances/Rocks/MI_Rock_03_JAB.MI_Rock_03_JAB=1
 /Game/Assets/AnimationSequence/Chest/AS_Chest_Idle.AS_Chest_Idle=0
+/Game/Assets/StaticMesh/AAA/TEST_TEST.TEST_TEST=1
+/Game/Assets/StaticMesh/AAA/TEST_TEST_Anim.TEST_TEST_Anim=1
+/Game/Assets/SkeletalMeshes/Chest/SKM_Chest_PA.SKM_Chest_PA=1
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2187,6 +2190,8 @@ TileSetEditorSettings="\"Object.Background.DefaultBackgroundColor\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/AnimationSequence/Chest/AS_Chest_Idle.AS_Chest_Idle;
+RecentlyPlaced=/Game/Assets/AnimationSequence/Chest/AS_Chest_Hit.AS_Chest_Hit;
 RecentlyPlaced=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_MiniHowitzer.SM_MiniHowitzer;
 RecentlyPlaced=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_Landmine.SM_Landmine;
 RecentlyPlaced=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_DrillGolden.SM_DrillGolden;
@@ -2205,8 +2210,6 @@ RecentlyPlaced=/Game/Assets/AnimationSequence/Cars/SA_Car_01_Idle.SA_Car_01_Idle
 RecentlyPlaced=/Game/Assets/AnimationSequence/Cars/SA_Car_01_Break.SA_Car_01_Break;
 RecentlyPlaced=/Game/Assets/StaticMesh/SM_Test.SM_Test;
 RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/Pura_caspa_PhysicsAsset.Pura_caspa_PhysicsAsset;
-RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/Pura_caspa_Anim.Pura_caspa_Anim;
-RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/Pura_caspa.Pura_caspa;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
