Wind Effect Merged

--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,7 +155,7 @@ ContentBrowserTab1.ActiveTypeFilters=AnimSequence,Material,ObjectRedirector,Skel
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets
+ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -999,26 +999,26 @@ MRUItem10=/Game/Levels/L_Lobby
 MRUItem11=/Game/Levels/L_HD_OD
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_03_PA
-MRUItem1=/Game/Assets/AnimationSequence/Car_03/AS_Car_03_Break
-MRUItem2=/Game/Assets/AnimationSequence/Car_03/AS_Car_03_Drift
-MRUItem3=/Game/Assets/StaticMesh/BBBC/Car_03_Idle_002_PhysicsAsset
-MRUItem4=/Game/Assets/StaticMesh/AAA/Drill_Drill
-MRUItem5=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_DrillGrey
-MRUItem6=/Game/Assets/StaticMesh/AAA/Drill_Drill_Anim
-MRUItem7=/Game/Assets/AnimationSequence/Car_02/AS_Car_02_Break
-MRUItem8=/Game/Assets/AnimationSequence/Chest/AS_Chest_Hit
-MRUItem9=/Game/Assets/AnimationSequence/Car_01/AS_Car_01_Break
-MRUItem10=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_01
-MRUItem11=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_01_PA
-MRUItem12=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_02
-MRUItem13=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_02_PA
-MRUItem14=/Game/Assets/StaticMesh/AAA/SKM_Car_03
-MRUItem15=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_03
-MRUItem16=/Game/Assets/StaticMesh/AAA/Car_03_Break
-MRUItem17=/Game/Assets/Materials/MI_Landmine
-MRUItem18=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_Landmine
-MRUItem19=/Game/Assets/Materials/M_Grass_RDB
+MRUItem0=/Game/Assets/StaticMesh/SM_CharacterSitting
+MRUItem1=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_03_PA
+MRUItem2=/Game/Assets/AnimationSequence/Car_03/AS_Car_03_Break
+MRUItem3=/Game/Assets/AnimationSequence/Car_03/AS_Car_03_Drift
+MRUItem4=/Game/Assets/StaticMesh/BBBC/Car_03_Idle_002_PhysicsAsset
+MRUItem5=/Game/Assets/StaticMesh/AAA/Drill_Drill
+MRUItem6=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_DrillGrey
+MRUItem7=/Game/Assets/StaticMesh/AAA/Drill_Drill_Anim
+MRUItem8=/Game/Assets/AnimationSequence/Car_02/AS_Car_02_Break
+MRUItem9=/Game/Assets/AnimationSequence/Chest/AS_Chest_Hit
+MRUItem10=/Game/Assets/AnimationSequence/Car_01/AS_Car_01_Break
+MRUItem11=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_01
+MRUItem12=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_01_PA
+MRUItem13=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_02
+MRUItem14=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_02_PA
+MRUItem15=/Game/Assets/StaticMesh/AAA/SKM_Car_03
+MRUItem16=/Game/Assets/StaticMesh/AAA_Cars_DELETE/SM_Car_03
+MRUItem17=/Game/Assets/StaticMesh/AAA/Car_03_Break
+MRUItem18=/Game/Assets/Materials/MI_Landmine
+MRUItem19=/Game/Assets/StaticMesh/AAA_TextureTeam/SM_Landmine
 
 [DetailCategories]
 BP_PipeBuilder_C.Tick=True
@@ -2103,6 +2103,7 @@ RenameAssets (Selected).None=True
 /Game/Assets/StaticMesh/AAA_TextureTeam/SM_DrillGrey.SM_DrillGrey=1
 /Game/Assets/StaticMesh/BBBC/Car_03_Idle_002_PhysicsAsset.Car_03_Idle_002_PhysicsAsset=1
 /Game/Assets/SkeletalMeshes/Cars/SKM_Car_03_PA.SKM_Car_03_PA=1
+/Game/Assets/StaticMesh/SM_CharacterSitting.SM_CharacterSitting=1
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2180,7 +2181,7 @@ NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSR
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categories.Categories[0]\" \"Object.Tutorials.Categories.Categories[1]\" \"Object.Tutorials.Categories.Categories[2]\" \"Object.Tutorials.Categories.Categories[3]\" \"Object.Tutorials.Categories.Categories[4]\" \"Object.Tutorials.Categories.Categories[5]\" \"Object.Tutorials.Categories.Categories[6]\" \"Object.Tutorials.Categories.Categories[7]\" \"Object.Tutorials.Categories.Categories[8]\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[11]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[12]\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.Preview.PreviewMeshes\" "
@@ -2240,6 +2241,8 @@ TileSetEditorSettings="\"Object.Background.DefaultBackgroundColor\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/StaticMesh/SM_Landmine.SM_Landmine;
+RecentlyPlaced=/Game/Assets/FX/VFX_07_Wind_01.VFX_07_Wind_01;
 RecentlyPlaced=/Game/Assets/AnimationSequence/Car_03/AS_Car_03_Break.AS_Car_03_Break;
 RecentlyPlaced=/Game/Assets/AnimationSequence/Car_03/AS_Car_03_Idle.AS_Car_03_Idle;
 RecentlyPlaced=/Game/Assets/StaticMesh/BBBC/Car_03_Idle_002_Anim.Car_03_Idle_002_Anim;
@@ -2258,8 +2261,6 @@ RecentlyPlaced=/Game/Assets/StaticMesh/CCC/AAA_Anim.AAA_Anim;
 RecentlyPlaced=/Game/Assets/StaticMesh/CCC/Car_02_Idle_Car_02_Steering_Wheel_Anim.Car_02_Idle_Car_02_Steering_Wheel_Anim;
 RecentlyPlaced=/Game/Assets/StaticMesh/AAA/Car_02_Idle_Car_02_Steering_Wheel_Anim.Car_02_Idle_Car_02_Steering_Wheel_Anim;
 RecentlyPlaced=/Game/Assets/AnimationSequence/Cars/AS_Car_02_DELETE.AS_Car_02_DELETE;
-RecentlyPlaced=/Game/Assets/StaticMesh/AAA/Harrison_Chei_Car_02_Master_06_1__Anim.Harrison_Chei_Car_02_Master_06_1__Anim;
-RecentlyPlaced=/Game/Assets/StaticMesh/AAA/Gun_Shooting_03_Barrel_Motor017_Anim.Gun_Shooting_03_Barrel_Motor017_Anim;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
