--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,7 +155,7 @@ ContentBrowserTab1.ActiveTypeFilters=AnimSequence,Material,ObjectRedirector,Skel
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh
+ContentBrowserTab1.SelectedPaths=/Game/Assets/SkeletalMeshes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2241,6 +2241,7 @@ TileSetEditorSettings="\"Object.Background.DefaultBackgroundColor\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/FX/VFX_08_FireEngine.VFX_08_FireEngine;
 RecentlyPlaced=/Game/Assets/StaticMesh/SM_Landmine.SM_Landmine;
 RecentlyPlaced=/Game/Assets/FX/VFX_07_Wind_01.VFX_07_Wind_01;
 RecentlyPlaced=/Game/Assets/AnimationSequence/Car_03/AS_Car_03_Break.AS_Car_03_Break;
@@ -2260,7 +2261,6 @@ RecentlyPlaced=/Game/Assets/StaticMesh/CCC/idle_animation_test_Anim.idle_animati
 RecentlyPlaced=/Game/Assets/StaticMesh/CCC/AAA_Anim.AAA_Anim;
 RecentlyPlaced=/Game/Assets/StaticMesh/CCC/Car_02_Idle_Car_02_Steering_Wheel_Anim.Car_02_Idle_Car_02_Steering_Wheel_Anim;
 RecentlyPlaced=/Game/Assets/StaticMesh/AAA/Car_02_Idle_Car_02_Steering_Wheel_Anim.Car_02_Idle_Car_02_Steering_Wheel_Anim;
-RecentlyPlaced=/Game/Assets/AnimationSequence/Cars/AS_Car_02_DELETE.AS_Car_02_DELETE;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
